Partial Main page Frontend and backend implementation

--- a/SE_Project/appsettings.json
+++ b/SE_Project/appsettings.json
@@ -7,11 +7,20 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=se-dotnet-server-001.mysql.database.azure.com;database=db_spotify_mysql;username=adminroot;password=Craiova123;SslMode=Preferred;"
-  } //String SslCa={path_to_CA_cert};
-
+    "DefaultConnection": "Data Source=LAPTOP-ROBERT\\SQLEXPRESS;Database=spotifydb;Trusted_Connection=True;TrustServerCertificate=True;ConnectRetryCount=0"
+  }
 }
 
 //"ConnectionStrings": {
 //    "DefaultConnectionString": "Data Source=DESKTOP-AI8IVFH;Initial Catalog=clinic_db;Integrated Security=True;Pooling=False;Encrypt=False;Trust Server Certificate=True"
 //  }
+
+
+//  "ConnectionStrings": {
+//  "DefaultConnection": "Data Source=LAPTOP-ROBERT\\SQLEXPRESS;Initial Catalog=spotifydb;Integrated Security=True;Pooling=False;Encrypt=False;Trust Server Certificate=True"
+//} //String SslCa={path_to_CA_cert};
+
+//"ConnectionStrings": {
+//  "DefaultConnection": "Server=se-dotnet-server-001.mysql.database.azure.com;database=db_spotify_mysql;username=adminroot;password=Craiova123;SslMode=Preferred;"
+//}
+
