--- a/SE_Project/appsettings.json
+++ b/SE_Project/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=se-dotnet-server-001.mysql.database.azure.com;database=db_spotify_mysql;username=adminroot;password=Craiova123;SslMode=Preferred;"
+    "DefaultConnection": "Data Source=LAPTOP-ROBERT\\SQLEXPRESS;Initial Catalog=spotifydb;Trusted_Connection=True;Trust Server Certificate=True;"
   }
 }
 
