--- a/SE_Project/appsettings.json
+++ b/SE_Project/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-ROBERT\\SQLEXPRESS;Initial Catalog=spotifydb;Trusted_Connection=True;Trust Server Certificate=True;"
+    "DefaultConnection": "Data Source=DESKTOP-AI8IVFH;Initial Catalog=spotifydb;Trusted_Connection=True;Trust Server Certificate=True;"
+
   }
 }
 
